--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,4 @@
 :root {
-  --general-heading-font: 'Poppins', monospace;
-  --general-description-font: 'Open Sans', monospace;
-
-  --primary-dark-color: black;
-  --primary-light-color: white;
-
-  --theme-color: rgb(0, 0, 215);
-
+  --general-font-family: 'Raleway', sans-serif;
+  --general-description-font: Arial, Helvetica, sans-serif;
 }
