changes made in css properties --not final

--- a/src/main.scss
+++ b/src/main.scss
@@ -117,3 +117,15 @@ body {
 .secondary-section {
   margin-top: 8em;
 }
+
+.application {
+  margin: auto;
+}
+
+.cardLayer {
+  display: block;
+}
+
+.card {
+  width: 26%;
+}
