--- a/src/main.css
+++ b/src/main.css
@@ -121,4 +121,16 @@ body {
 .secondary-section {
   margin-top: 8em;
 }
+
+.application {
+  margin: auto;
+}
+
+.cardLayer {
+  display: block;
+}
+
+.card {
+  width: 26%;
+}
 /*# sourceMappingURL=main.css.map */
